tests/testdata/error_cause_recursive_tail.ts.out
error: Uncaught (in promise) Error: baz
const baz = new Error("baz", { cause: bar });
            ^
    at file:///[WILDCARD]/error_cause_recursive_tail.ts:3:13
Caused by: Error: bar <ref *1>
    at file:///[WILDCARD]/error_cause_recursive_tail.ts:2:13
Caused by: Error: foo
    at file:///[WILDCARD]/error_cause_recursive_tail.ts:1:13
Caused by: [Circular *1]
